# TOI

./: .gitignore  .notes.txt.kate-swp  .plan4.txt.swp  Dockerfile_wyzej  LICENSE  PR_INSTRUCTIONS.md  README.md  WINDOW_POSITIONING_FIX.md  alpaca.py  alpaca.txt  aux_gui.py  base_async_widget.py  base_window.py  conditions_gui.py  config_service.py  demofile2.txt  docker-compose.yaml_wyzej  exp.py  fits_gui.py  fits_save.py  flat_gui.py  focus_data.txt  focus_fields.txt  focus_gui.py  guider_gui.py  instrument_gui.py  mnt_gui.py  mnt_manual_gui.py  nats_watch.py  notes.txt  object_catalog.txt  object_catalog_back.txt  obs_gui.py  pery_gui.py  plan.txt  plan2.txt  plan20230528.txt  plan3.txt  plan4.txt  plan5.txt  (+18 more)
,/ffs_lib/: ffs.py
Icons/: SwitchOff.png.bak
Logs/: msg_log.txt  zb08_flats_log.txt
Misc/: changelog.txt  jk15.txt  wk06.txt  zb08.txt
Plans/: bad_weather.txt  bf06m2.txt  jk15-ngc3201.txt  jk15-ngc362.txt  jk15_obsplan.txt  plan2.txt  plan3.txt  plan5.txt  stdPaunzen2015.txt  stdSOAR.txt  wk06_evening_flats_1.txt  wk06_evening_flats_2.txt  wk06_morning_flats_1.txt  wk06_morning_flats_2.txt  wk06_stromgren_std.txt  zb08_evening_flats_1.txt  zb08_evening_flats_2.txt  zb08_morning_flats_1.txt  zb08_morning_flats_2.txt  zb08_obsplan.txt  zb08_standards.txt
PyQtX/: QtCore.py  QtGui.py  QtWidgets.py
calcFocus/: calc_focus.py
configuration/: settings.py
ffs_lib/: ffs.py
util_functions/: asyncio_util_functions.py
