[tool.poetry]
name = "toi"
version = "0.1.2"
description = "Telescope Operator Interface"
authors = ["Marek Górski <you@example.com>"]
readme = "README.md"
repository = "https://github.com/astromg/TOI"  # to be moved to https://github.com/araucaria
keywords = ["astronomy", "telescopes"]

[tool.poetry.dependencies]
python = "^3.10"
pyaraucaria = {git = "https://github.com/araucaria-project/pyaraucaria.git"}
serverish = {version="^1.1.0", extras=["messenger"]}
astropy = ">=5.0.4"
requests = "^2.28.1"
ephem = ">=4.1.4"
matplotlib = ">=3.6.3"
numpy = ">=1.24.1"
qasync = "^0.27.1"
# ocabox = {git = "https://github.com/araucaria-project/ocabox.git"}
ocabox = {path = "../ocabox", develop = true}
ocabox-common = {git = "https://github.com/araucaria-project/ocabox-common.git"}
#ocabox-common = {path = "../ocabox-common", develop = true}
tpg = {path = "../tpg", develop = true}
ctc = {git = "https://github.com/araucaria-project/ctc.git"}
paho-mqtt = ">=1.6.1"
scipy = ">=1.9.0"
pyqt6 = {version="*"}
pylint = "^4.0.4"


[tool.poetry.scripts]
toi = "toi:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
