[tool.poetry]
name = "toi"
version = "1.1.0"
description = "Telescope Operator Interface"
authors = ["Marek Górski <you@example.com>"]
readme = "README.md"
repository = "https://github.com/astromg/TOI"
keywords = ["astronomy", "telescopes"]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"

pyaraucaria = {git = "https://github.com/araucaria-project/pyaraucaria.git"}
serverish = {version="^2.0.2", extras=["messenger"]}

astropy = ">=6.0"          # starsze mogą nie wspierać 3.13
requests = "^2.32.0"

matplotlib = ">=3.8.0"
numpy = ">=1.26,<3"        # pozwala na numpy 2.x
qasync = "^0.27.1"

ocabox = {git = "https://github.com/araucaria-project/ocabox.git"}
#ocabox = {path = "../ocabox", develop = true}
ocabox-common = {git = "https://github.com/araucaria-project/ocabox-common.git"}
tpg = {path = "../tpg", develop = true}
ctc = {git = "https://github.com/araucaria-project/ctc.git"}

paho-mqtt = ">=1.6.1"
scipy = ">=1.11"           # potrzebne dla nowych Pythonów
pyqt6 = ">=6.7"            # starsze mogą nie działać
pylint = "^4.0.4"

[tool.poetry.scripts]
toi = "toi:main"
nw = "nats_watch:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"